- Added marketing copy to home page

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<div class="container clearfix">
 							<div class="slider-caption slider-caption-center">
 								<h2 data-caption-animate="fadeInUp">Peers teaching Peers</h2>
-								<p data-caption-animate="fadeInUp" data-caption-delay="100">Talk about what benefits TutorPeer provides. What's so special about peers teaching peers? How is our platform useful for tutors and tutees?</p>
+								<p data-caption-animate="fadeInUp" data-caption-delay="100">Free, fast, and convenient market to connect tutors and tutees. Your school, your decision!</p>
 							</div>
 						</div>
 					</div>
@@ -228,7 +228,7 @@
 									<img src="images/team/1.jpg" alt="John Doe">
 								</div>
 								<div class="team-desc team-desc-bg">
-									<div class="team-title"><h4>John Smith</h4><span>Math</span></div>
+									<div class="team-title"><h4>John Lee</h4><span>Math</span></div>
 								</div>
 							</div>
 
@@ -296,18 +296,25 @@
 
 						<h3>How it Works</h3>
 
-						<p>Short overview of what TutorPeer is and what benefits it can provide. Lorem ipsum dolor sit amet. Quidem, quos, facilis esse rem dicta dignissimos eligendi earum sapiente ipsam iure vel deserunt? Soluta doloremque aspernatur quis asperiores numquam placeat dolore.</p>
+						<p><b>If you want to find a tutor: </b>Tell us your
+						course and your time preferences. We will suggest
+						a list of tutors and automatically handle scheduling for you.</p>
 
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum, ab incidunt temporibus rerum odio accusantium.</p>
+						<p><b>If you want to become a tutor: </b> Tell us your desired rate, courses, and time preferences. We will suggest
+						tutees for you and automatically handle scheduling for you. Tutors on PeerTutor earn an average of 2-5x times as much as Tutor Clearinghouse Tutors.</p>
 
 						<div class="divider divider-short"><i class="icon-circle"></i></div>
-
+						For tutees:
 						<ul class="iconlist iconlist-large iconlist-color">
-							<li><i class="icon-ok-sign"></i> Feature number one</li>
-							<li><i class="icon-ok-sign"></i> Benefit number one</li>
-							<li><i class="icon-ok-sign"></i> Lorem ipsum dolor sit</li>
-							<li><i class="icon-ok-sign"></i> Consectetur adipisicing</li>
-							<li><i class="icon-ok-sign"></i> Feature and benefits # 3</li>
+							<li><i class="icon-ok-sign"></i> Requests are fully anonymous</li>
+							<li><i class="icon-ok-sign"></i> Get instant access to a large database of tutors</li>
+							<li><i class="icon-ok-sign"></i> Guaranteed, conflict-free scheduling</li>
+							</ul>
+							
+						For tutors:
+						<ul class="iconlist iconlist-large iconlist-color">
+							<li><i class="icon-ok-sign"></i> Earn $20 - $50 per hour </li>
+							<li><i class="icon-ok-sign"></i> Guaranteed, conflict-free scheduling</li>
 						</ul>
 
 					</div>
